[gd_scene load_steps=3 format=3 uid="uid://clpsmg2b1cq4q"]

[ext_resource type="Script" path="res://SaveGame/save_screen.gd" id="1_cbcef"]
[ext_resource type="PackedScene" uid="uid://d3tegcqp7jjpo" path="res://SaveGame/saved_button.tscn" id="1_q7cyn"]

[node name="SaveScreen" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_cbcef")
save_button_path = ExtResource("1_q7cyn")

[node name="VBoxC" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxC"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Save your progress"
horizontal_alignment = 1

[node name="PC" type="PanelContainer" parent="VBoxC"]
layout_mode = 2

[node name="MC" type="MarginContainer" parent="VBoxC/PC"]
layout_mode = 2

[node name="VBoxC" type="VBoxContainer" parent="VBoxC/PC/MC"]
layout_mode = 2

[node name="FileName" type="LineEdit" parent="VBoxC/PC/MC/VBoxC"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
placeholder_text = "New file name"

[node name="HSeparator" type="HSeparator" parent="VBoxC/PC/MC/VBoxC"]
layout_mode = 2
theme_override_constants/separation = 16

[connection signal="text_submitted" from="VBoxC/PC/MC/VBoxC/FileName" to="." method="_on_file_name_text_submitted"]
